[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/ShipObject.gd" type="Script" id=1]
[ext_resource path="res://Assets/sprite/ufo_move1.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 8.56589
height = 16.0905

[node name="Ship" type="Area2D" index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )

[node name="Collision" type="CollisionShape2D" parent="." index="1"]

position = Vector2( -1.92403, 1.67814 )
scale = Vector2( 3.55728, 0.841663 )
shape = SubResource( 1 )

[connection signal="turnLeft" from="." to="." method="_on_Ship_turnLeft"]

[connection signal="turnRight" from="." to="." method="_on_Ship_turnRight"]


